--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         </video>
         <div id="welcome-container">
             <div id="welcome-text">
-                <h1>Welcome to the Online Game on Environmental and Social Management Framework (ECSMF)</h1>
+                <h1>Welcome to the Online Game on Water Supply Project</h1>
                 <p>Please enter your details to start the game.</p>
                 <img src="logo.jpg" alt="Welcome Image" id="welcome-image">
             </div>
